# VIP-MUSIC

./: Dockerfile  README.md  pyproject.toml  requirements.txt
VIPMUSIC/: __init__.py
VIPMUSIC/plugins/tools/: download_stream.py
config/: config.py
strings/langs/: en.yml
